# mod-trial-of-finality

./: CMakeLists.txt  LICENSE  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
conf/: mod_trial_of_finality.conf
data/sql/: 2023_10_27_00_mod_trial_of_finality_instance_template.sql  2024_01_01_01_tof_permadeath_status_table.sql  2024_01_01_02_tof_item_trial_token.sql  2024_01_01_03_tof_title_reward.sql
data/sql/updates/applied/world/: 2024_01_01_00_tof_log_table.sql  2024_01_01_04_tof_npc_fateweaver_template.sql  2024_01_01_05_tof_npc_fateweaver_spawn.sql  2024_01_01_06_tof_npc_announcer_template.sql
docs/: ADMIN_TESTING_GUIDE.md  COMMANDS_GUIDE.md  CONFIGURATION_GUIDE.md  DEVELOPER_GUIDE.md  GAMEPLAY_GUIDE.md  PLAYER_TESTING_GUIDE.md  testing_guide.md  trial_mechanics.md
sql/: character_trial_finality_status.sql  item_trial_token.sql  log_table_trial_of_finality.sql  npc.sql  title_reward.sql
src/: mod_trial_of_finality.cpp
